--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
@@ -14,6 +14,7 @@ else
             <tr>
                 <th>Id</th>
                 <th>Nombre</th>
+                <th></th>
             </tr>
         </thead>
         <tbody>
@@ -22,6 +23,10 @@ else
                 <tr>
                     <td>@localidad.Id</td>
                     <td>@localidad.Nombre</td>
+                    <td>
+                        <a href="/editarlocalidad{IdLocalidadEditada=@localidad.Id}">Editar</a>
+                    </td>
+                        
                 </tr>
             }
         </tbody>
