--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
@@ -24,7 +24,7 @@ else
                     <td>@localidad.Id</td>
                     <td>@localidad.Nombre</td>
                     <td>
-                        <a href="/editarlocalidad{IdLocalidadEditada=@localidad.Id}">Editar</a>
+                        <a href="/editarlocalidad?IdLocalidadEditada=@localidad.Id">Editar</a>
                     </td>
                         
                 </tr>
