--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/EditarLocalidad.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/EditarLocalidad.razor
@@ -14,7 +14,7 @@ else
         <DataAnnotationsValidator />
         <ValidationSummary />
 
-        <div class="form-group">
+        <div class="form-group mb-2">
             <label for="Nombre">Nombre</label>
             <InputText id="Nombre" class="form-control" @bind-Value="@localidad.Nombre" />
         </div>
