--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
@@ -24,7 +24,11 @@ else
                     <td>@producto.Id</td>
                     <td>@producto.Nombre</td>
                     <td>@producto.Precio</td>
+                    <td> 
+                        <a href="/editarproducto?IdProductoEditado=@producto.Id">Editar</a>
+                    </td>
                 </tr>
+                
             }
         </tbody>
     </table>
