--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/EditarProducto.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/EditarProducto.razor
@@ -2,7 +2,8 @@
 @inject IGenericService<Producto> GenericService
 @inject NavigationManager NavigationManager
 
-<h3>Editando un producto </h3>
+
+<HeaderPage TitlePage="Editando un producto" />
 
 @if (producto == null)
 {
