--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/_Imports.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/_Imports.razor
@@ -11,3 +11,5 @@
 @using KioskoInformaticoServices.Interfaces 
 @using KioskoInformaticoServices.Models
 @using KioskoInformaticoServices.Services
+@using KioskoInformaticoWeb.Components.Commons;
+@using CurrieTechnologies.Razor.SweetAlert2
