--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Localidades/Localidades.razor
@@ -1,7 +1,8 @@
 ﻿@page "/localidades"
 @inject IGenericService<Localidad> LocalidadService
+@inject SweetAlertService SweetAlert
 
-<h3>Localidades</h3>
+<HeaderPage TitlePage="Localidades" />
 
 @if (localidades == null)
 {
@@ -26,7 +27,10 @@ else
                     <td>
                         <a href="/editarlocalidad?IdLocalidadEditada=@localidad.Id">Editar</a>
                     </td>
-                        
+                    <td>
+                        <button title="Eliminar" class="btn btn-danger" @onclick="@(()=>Eliminar(localidad))">Eliminar</button>
+                     </td>
+
                 </tr>
             }
         </tbody>
@@ -40,6 +44,23 @@ else
     {
         localidades = await LocalidadService.GetAllAsync();
     }
+    private async void Eliminar(Localidad localidad)
+    {
+        SweetAlertResult respuesta = await SweetAlert.FireAsync(new SweetAlertOptions
+            {
+                Title = "Borrando Localidad",
+                Text = $"¿Está seguro que desea borrar a la localidad {localidad.Nombre}",
+                Icon = SweetAlertIcon.Warning,
+                ShowCancelButton = true,
+                ConfirmButtonText = "Si, quiero borrarla!",
+                CancelButtonText = "No, espera"
+            });
+        if (respuesta.IsConfirmed)
+        {
+            await LocalidadService.DeleteAsync(localidad.Id);
+            localidades = await LocalidadService.GetAllAsync();
+            StateHasChanged();
+        }
 
-
+    }
 }
