--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
@@ -1,7 +1,7 @@
 ﻿@page "/productos"
 @inject IGenericService<Producto> GenericService
 
-<h3>Productos</h3>
+    <HeaderPage TitlePage="Producto"/>
 
 @if (productos == null)
 {
