Añadidas nuevas vistas y lógica para productos y clientes
Se han realizado los siguientes cambios:
- Añadidas referencias de compilación para `Productos.xaml` y `Productos.xaml.cs` en `KioscoInformaticoApp.csproj`.
- Configuración para excluir `Cliente.razor` de la publicación de un solo archivo en `KioskoInformaticoWeb.csproj`.
- Eliminada carpeta vacía `Pages\Clientes\` en `KioskoInformaticoWeb.csproj`.
- Inyección de `SweetAlertService` y método `Eliminar` en `Productos.razor`.
- Creada clase `ProductosViewModel` en `ProductosViewModel.cs` para la lógica de la vista de productos.
- Añadidos archivos `Productos.xaml` y `Productos.xaml.cs` para la interfaz y lógica de la vista de productos.
- Añadida página `Cliente.razor` para gestionar clientes.
- Añadida página `EditarLocalidad.razor` para editar localidades.

--- a/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
+++ b/KioskoInformaticoWeb/KioskoInformaticoWeb/Pages/Productos/Productos.razor
@@ -1,5 +1,6 @@
 ﻿@page "/productos"
 @inject IGenericService<Producto> GenericService
+@inject SweetAlertService SweetAlert
 
     <HeaderPage TitlePage="Producto"/>
 
@@ -39,5 +40,25 @@ else
     protected override async Task OnInitializedAsync()
     {
         productos = await GenericService.GetAllAsync();
+    }
+
+    private async void Eliminar(Producto producto)
+    {
+        SweetAlertResult respuesta = await SweetAlert.FireAsync(new SweetAlertOptions
+            {
+                Title = "Borrando Producto",
+                Text = $"¿Está seguro que desea borrar el producto {producto.Nombre}",
+                Icon = SweetAlertIcon.Warning,
+                ShowCancelButton = true,
+                ConfirmButtonText = "Si, quiero borrarlo!",
+                CancelButtonText = "No, espera"
+            });
+        if (respuesta.IsConfirmed)
+        {
+            await ProductosService.DeleteAsync(producto.Id);
+            producto = await ProductosService.GetAllAsync();
+            StateHasChanged();
+        }
+
     }
 }
